2021-11-20  7.1.0-15  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-15 GIT revision 19376:b80d2471d:20211120

2021-11-15  7.1.0-15  <quetzlzacatenango@image...>
  * fix alpha channel calculation of arithmetic divide compose operator.

2021-11-13  7.1.0-14  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-14 GIT revision 19349:2ba5cdf42:20211114

2021-11-13  7.1.0-14  <quetzlzacatenango@image...>
  * Support '#' modifier to aspect ratio geometry (e.g., 3:2#).

2021-11-11  7.1.0-14  Dirk Lemstra <dirk@lem.....org>
  * The profile of a PSD file will no longer be copied to all the images, only
    the first returned image will contain the profile. To re-enable the old
    behavior add -define psd:replicate-profile=true.

2021-10-28  7.1.0-13  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-13 GIT revision 19325:987f36b50:20211028

2021-10-28  7.1.0-13  Dirk Lemstra <dirk@lem.....org>
  * Fix stack overflow when parsing malicious ps image file (report from
    Muhammad Aldo Firmansyah).

2021-10-25  7.1.0-12  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-12 GIT revision 19318:113f8f901:20211025

2021-10-15  7.1.0-12  <quetzlzacatenango@image...>
  * Fix x64 build.

2021-10-24  7.1.0-11  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-11 GIT revision 19313:fbf76f2ef:20211024

2021-10-11  7.1.0-11  <quetzlzacatenango@image...>
  * Fix connected component abort trap (reference
    https://github.com/ImageMagick/ImageMagick/issues/4372).
  * Fix possible unitialized values (reference
    https://github.com/ImageMagick/ImageMagick/issues/4379).
  * Fix stack overflow when parsing malicious tiff image file (report from
    Muhammad Aldo Firmansyah).

2021-10-10  7.1.0-10  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-10 GIT revision 19236:07ebe6b6e:20211010

2021-10-03  7.1.0-10  <quetzlzacatenango@image...>