@@ -1,8 +1,12 @@
 2021-11-20  7.1.0-15  <quetzlzacatenango@image...>
   * Release ImageMagick version 7.1.0-15 GIT revision 19376:b80d2471d:20211120
 
+2021-11-20  7.1.0-15  Dirk Lemstra <dirk@lem.....org>
+  * Added support for reading extra channels in a PSD file (reference
+    https://github.com/ImageMagick/ImageMagick/issues/4499).
+
 2021-11-15  7.1.0-15  <quetzlzacatenango@image...>
-  * fix alpha channel calculation of arithmetic divide compose operator.
+  * Fix alpha channel calculation of arithmetic divide compose operator.
 
 2021-11-13  7.1.0-14  <quetzlzacatenango@image...>
   * Release ImageMagick version 7.1.0-14 GIT revision 19349:2ba5cdf42:20211114
